snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3.jar.md5
c22e8445b64ec48ba4b2dd7d0aab1f9f